# Hakaton

./: CMakeLists.txt
DemoApp/: CMakeLists.txt
DemoApp/src/: Application.cpp  Application.h  Graphics.cpp  Graphics.h  Window.cpp  Window.h  main.cpp
Face_Recognition/: face_recognition.py  keep_secure.py  timeout.json  userdata.json
Launcher/: CMakeLists.txt
Launcher/src/: Application.cpp  DemoExcept.cpp  DemoExcept.h  Graphics.cpp  Window.cpp  main.cpp
MySQLsender/: main.py  sendreq.ini
VmDetect/: CMakeLists.txt
VmDetect/src/: VmDetect.cpp  VmDetect.hpp  VmExcept.cpp  VmExcept.h
Website/: index.html  style.css
